--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
     {
-      "name": "angular2-quickstart",
+      "name": "HAVC",
       "version": "1.0.0",
       "scripts": {
         "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
@@ -24,6 +24,8 @@
         "systemjs": "0.19.27",
         "core-js": "^2.4.0",
         "reflect-metadata": "^0.1.3",
+    	"d3": "^3.5.17",
+    	"moment": "^2.14.1",
         "rxjs": "5.0.0-beta.6",
         "zone.js": "^0.6.12",
         "angular2-in-memory-web-api": "0.0.14",
